language/move-compiler/tests/move_check/parser/spec_parsing_implies_fail.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_implies_fail.move:2:25
  │
2 │     fun implies_in_prog(x: bool) {
  │                         ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'

error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/parser/spec_parsing_implies_fail.move:3:15
  │
3 │       let _ = x ==> x;
  │               ^^^^^^^ `==>` operator only allowed in specifications

